Correct overflow-x not hidden on body in Safari Mac

--- a/nondestructive-reset.css
+++ b/nondestructive-reset.css
@@ -1,10 +1,12 @@
-/* nondestructive-reset.css v1.1.1 | MIT License | github.com/BYODKM */
+/* nondestructive-reset.css v1.1.2 | MIT License | github.com/BYODKM */
 .html {
   height: 100%;
+  overflow-x: hidden;
 }
 .body {
   min-width: 320px;
   min-height: 100%;
+  overflow-x: visible;
   line-height: 1.25;
   word-wrap: break-word;
   -webkit-font-smoothing: antialiased;
